[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/maze_editor/grid.gd" type="Script" id=1]
[ext_resource path="res://img/tiles.png" type="Texture" id=2]
[ext_resource path="res://scenes/maze_editor/sig.gd" type="Script" id=3]
[ext_resource path="res://scenes/maze_editor/counter.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
5/name = "tiles.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 48, 128, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tiles.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 144, 128, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tiles.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 64, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/KarmaFuture.ttf"

[sub_resource type="DynamicFont" id=3]
size = 51
outline_color = Color( 0, 1, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/KarmaFuture.ttf"

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/KarmaFuture.ttf"

[sub_resource type="DynamicFont" id=9]
size = 50
outline_color = Color( 0, 1, 0, 1 )
font_data = SubResource( 8 )

[node name="MazeEditor" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 122.861, 71.9187 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 1 )

[node name="Control" type="Control" parent="TileMap"]
margin_right = 700.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TileMap/Control"]
margin_left = 447.451
margin_top = 4.54233
margin_right = 703.451
margin_bottom = 489.542
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TileMap/Control/VBoxContainer"]
margin_right = 256.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.760784, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0117647, 0.215686, 0.0823529, 1 )
text = "0"
align = 1
max_lines_visible = 64
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="TileMap/Control/VBoxContainer/Label"]

[node name="Reset" type="Button" parent="TileMap/Control/VBoxContainer"]
margin_top = 71.0
margin_right = 256.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.784314, 0, 1 )
text = "Reset"

[node name="Submit" type="Button" parent="TileMap/Control/VBoxContainer"]
margin_top = 147.0
margin_right = 256.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0.784314, 0, 1 )
text = "Submit"
[connection signal="buildMaze" from="." to="TileMap" method="_on_MazeEditor_buildMaze"]
[connection signal="coordinates" from="TileMap" to="." method="_on_TileMap_coordinates"]
[connection signal="go" from="TileMap/Control/VBoxContainer/Label" to="TileMap" method="_on_Label_go"]
[connection signal="timeout" from="TileMap/Control/VBoxContainer/Label/Timer" to="TileMap/Control/VBoxContainer/Label" method="_on_Timer_timeout"]
[connection signal="pressed" from="TileMap/Control/VBoxContainer/Reset" to="TileMap" method="_on_Reset_pressed"]
[connection signal="pressed" from="TileMap/Control/VBoxContainer/Submit" to="TileMap" method="_on_Submit_pressed"]
